plots masked probability and wind data

--- a/plot_images.ipynb
+++ b/plot_images.ipynb
@@ -13,9 +13,14 @@
    "source": [
     "import os\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import rasterio\n",
-    "from matplotlib.colors import ListedColormap"
+    "from datetime import datetime\n",
+    "from pytz import timezone, utc\n",
+    "from matplotlib.colors import ListedColormap\n",
+    "from matplotlib.colors import LinearSegmentedColormap\n",
+    "from pytz import timezone"
    ],
    "outputs": [],
    "execution_count": 20
@@ -30,9 +35,10 @@
    "cell_type": "code",
    "source": [
     "# --- Parameters ---\n",
-    "original_root = \"/Users/ereilly/Documents/code/autoSAR_preprocessing/test/output\"\n",
-    "mask_root = \"/Users/ereilly/Documents/code/autoSAR_preprocessing/output_postprocessing\"\n",
-    "output_plot_dir = \"/Users/ereilly/Documents/code/autoSAR_preprocessing/plotted_images\""
+    "original_root = \"/Volumes/External/TJ_SAR/02_preprocessed/02_JunethroughDec2024\"\n",
+    "mask_root = \"/Volumes/External/TJ_SAR/04_iseg\"\n",
+    "output_plot_dir = \"/Volumes/External/TJ_SAR/05_viz\"\n",
+    "met_csv_path = \"/Volumes/External/TJ_estuary/analysis/TJRTLMET.csv\""
    ],
    "id": "9d322ec7c53089c3",
    "outputs": [],
@@ -47,10 +53,22 @@
    },
    "cell_type": "code",
    "source": [
-    "overlay_cmap = ListedColormap([\n",
-    "    (0.0, 0.0, 0.0, 0.0),   # transparent\n",
-    "    (1.0, 0.5, 0.0, 1.0)    # solid orange\n",
-    "])\n"
+    "pacific = timezone(\"US/Pacific\")\n",
+    "# --- Load meteorological data (in Pacific Time) ---\n",
+    "met_df = pd.read_csv(met_csv_path)\n",
+    "met_df.columns = met_df.columns.str.strip()\n",
+    "\n",
+    "met_df[\"DateTimeStamp\"] = pd.to_datetime(\n",
+    "    met_df[\"DateTimeStamp\"], format=\"%m/%d/%y %H:%M\", errors=\"coerce\"\n",
+    ")\n",
+    "met_df[\"DateTimeStamp\"] = met_df[\"DateTimeStamp\"].dt.tz_localize(\n",
+    "    pacific,\n",
+    "    ambiguous=\"NaT\",     # handle fall-back (ambiguous) times\n",
+    "    nonexistent=\"NaT\"    # handle spring-forward (nonexistent) times\n",
+    ")\n",
+    "met_df = met_df.dropna(subset=[\"DateTimeStamp\"])\n",
+    "\n",
+    "met_df = met_df.sort_values(\"DateTimeStamp\")\n"
    ],
    "id": "45ee58db6bff4b69",
    "outputs": [],
@@ -65,7 +83,24 @@
    },
    "cell_type": "code",
    "source": [
-    "# --- Function to get original image path based on naming pattern ---\n",
+    "def extract_datetime_from_filename(filename):\n",
+    "    \"\"\"Extract UTC datetime from Sentinel-1 filename.\"\"\"\n",
+    "    parts = filename.split(\"_\")\n",
+    "    for part in parts:\n",
+    "        if part.startswith(\"20\") and \"T\" in part:\n",
+    "            try:\n",
+    "                return utc.localize(datetime.strptime(part, \"%Y%m%dT%H%M%S\"))\n",
+    "            except ValueError:\n",
+    "                continue\n",
+    "    return None\n",
+    "\n",
+    "def get_nearest_met_data(local_time):\n",
+    "    \"\"\"Find the closest met record to the given local time.\"\"\"\n",
+    "    time_deltas = (met_df[\"DateTimeStamp\"] - local_time).abs()\n",
+    "    nearest_idx = time_deltas.idxmin()\n",
+    "    row = met_df.loc[nearest_idx]\n",
+    "    return row[\"WSpd\"], row[\"Wdir\"], row[\"DateTimeStamp\"]\n",
+    "\n",
     "def match_original_path(mask_filename):\n",
     "    return os.path.join(original_root, mask_filename.replace(\"_JPL0.4_VVDR_cumulative_mask.tif\", \".tif\"))"
    ],
@@ -82,8 +117,15 @@
    },
    "cell_type": "code",
    "source": [
-    "# Plot side-by-side: original + overlay\n",
     "def plot_overlay(original_path, mask_path, output_path):\n",
+    "    # --- Extract and convert image time ---\n",
+    "    image_time_utc = extract_datetime_from_filename(os.path.basename(original_path))\n",
+    "    image_time_local = image_time_utc.astimezone(pacific)\n",
+    "\n",
+    "    # --- Match meteorological data ---\n",
+    "    wspd, wdir, met_time = get_nearest_met_data(image_time_local)\n",
+    "\n",
+    "    # --- Read images ---\n",
     "    with rasterio.open(original_path) as src:\n",
     "        original = src.read(1)\n",
     "        bounds = src.bounds\n",
@@ -92,28 +134,91 @@
     "    with rasterio.open(mask_path) as src:\n",
     "        mask = src.read(1)\n",
     "\n",
-    "    # Normalize original using standard deviation\n",
+    "    # --- Normalize image using standard deviation scaling ---\n",
     "    mean = np.nanmean(original)\n",
     "    std = np.nanstd(original)\n",
     "    z_scaled = (original - mean) / std\n",
     "    clipped = np.clip(z_scaled, -2, 2)\n",
-    "    normed = (clipped + 2) / 4  # range [0, 1]\n",
+    "    normed = (clipped + 2) / 4  # Scale to [0, 1]\n",
     "\n",
-    "    # Plot side-by-side\n",
-    "    fig, axes = plt.subplots(1, 2, figsize=(10, 12), constrained_layout=True)\n",
+    "    # --- Set up side-by-side figure ---\n",
+    "    fig, axes = plt.subplots(1, 2, figsize=(9, 12), constrained_layout=True)\n",
     "\n",
-    "\n",
-    "    # Left: original\n",
+    "    # Left: original only\n",
     "    axes[0].imshow(normed, cmap=\"gray\", extent=extent)\n",
-    "    axes[0].set_title(\"Pre-Processed\", fontsize=16)\n",
+    "    axes[0].set_title(\"Original (Normalized)\", fontsize=12)\n",
     "    axes[0].axis('off')\n",
     "\n",
     "    # Right: original + mask\n",
     "    axes[1].imshow(normed, cmap=\"gray\", extent=extent)\n",
-    "    axes[1].imshow(mask, cmap=overlay_cmap, extent=extent)\n",
-    "    axes[1].set_title(\"Output with Mask\", fontsize=16)\n",
+    "\n",
+    "    # mask out all zero pixels so they won’t be drawn\n",
+    "    masked = np.ma.masked_where(mask == 0, mask)\n",
+    "\n",
+    "\n",
+    "    # 1. Make a boolean mask\n",
+    "    mask_bin = (mask > 0)\n",
+    "\n",
+    "    # 2. Build an RGBA overlay array:\n",
+    "    #    R=1, G=1, B=0.8 (light yellow), A=0.5 (50% opaque)\n",
+    "    overlay = np.zeros((mask.shape[0], mask.shape[1], 4))\n",
+    "    overlay[mask_bin] = [1.0, 1.0, 0.8, 1.0]\n",
+    "\n",
+    "    # 3. Draw it on top\n",
+    "    axes[1].imshow(overlay, extent=extent)\n",
+    "\n",
+    "    axes[1].set_title(\"Original with Plume Mask\", fontsize=12)\n",
     "    axes[1].axis('off')\n",
     "\n",
+    "\n",
+    "    # --- Bottom annotation: wind info + local time ---\n",
+    "    wind_text = (\n",
+    "        f\"Wind: {wspd:.1f} m/s @ {wdir:.0f}°\\n\"\n",
+    "        f\"Local Time: {image_time_local.strftime('%Y-%m-%d %H:%M')}\"\n",
+    "    )\n",
+    "    fig.text(0.5, 0.15, wind_text, ha='center', fontsize=13, fontweight='bold')\n",
+    "\n",
+    "\n",
+    "    # --- Wind vector in real coordinates ---\n",
+    "    import matplotlib.patches as patches\n",
+    "    import math\n",
+    "\n",
+    "\n",
+    "    # --- Compute arrow parameters ---\n",
+    "    wind_angle_deg = (270 - wdir) % 360  # convert \"from\" to math angle\n",
+    "    angle_rad = math.radians(wind_angle_deg)\n",
+    "\n",
+    "    # Get image height (in spatial units)\n",
+    "    height = bounds.top - bounds.bottom\n",
+    "\n",
+    "    # Base arrow length as % of image height, scaled by wind speed\n",
+    "    base_frac = 0.07  # base length = 7% of image height\n",
+    "    scale = np.clip(wspd / 10, 0.5, 1.5)  # scale between 50%–150%\n",
+    "    arrow_length = height * base_frac * scale\n",
+    "\n",
+    "    # Arrow vector\n",
+    "    dx = arrow_length * math.cos(angle_rad)\n",
+    "    dy = arrow_length * math.sin(angle_rad)\n",
+    "\n",
+    "    # Starting point (near bottom-right of image)\n",
+    "    x0 = bounds.right - 0.1 * (bounds.right - bounds.left)\n",
+    "    y0 = bounds.bottom + 0.05 * height\n",
+    "\n",
+    "    # --- Draw the arrow ---\n",
+    "    axes[1].add_patch(\n",
+    "        patches.FancyArrow(\n",
+    "            x0, y0, dx, dy,\n",
+    "            width=arrow_length * 0.05,\n",
+    "            head_width=arrow_length * 0.15,\n",
+    "            head_length=arrow_length * 0.15,\n",
+    "            length_includes_head=True,\n",
+    "            transform=axes[1].transData,\n",
+    "            color='lime',\n",
+    "            alpha=0.9\n",
+    "        )\n",
+    "    )\n",
+    "\n",
+    "    # --- Save plot ---\n",
     "    os.makedirs(output_plot_dir, exist_ok=True)\n",
     "    plt.savefig(output_path, dpi=150, bbox_inches='tight')\n",
     "    plt.close()\n",
@@ -132,20 +237,23 @@
    },
    "cell_type": "code",
    "source": [
-    "# --- Iterate over all masks ---\n",
+    "# --- Main processing loop ---\n",
     "for root, _, files in os.walk(mask_root):\n",
     "    for file in files:\n",
+    "        if file.startswith('.'):\n",
+    "            continue\n",
     "        if file.endswith(\"_JPL0.4_VVDR_cumulative_mask.tif\"):\n",
     "            mask_path = os.path.join(root, file)\n",
     "            original_path = match_original_path(file)\n",
     "\n",
     "            if os.path.exists(original_path):\n",
-    "                # Save all to flat folder, name derived from base name\n",
-    "                out_name = file.replace(\"_JPL0.4_VVDR_cumulative_mask.tif\", \"_overlay.png\")\n",
-    "                output_path = os.path.join(output_plot_dir, out_name)\n",
+    "                flat_name = file.replace(\"_JPL0.4_VVDR_cumulative_mask.tif\", \"_overlay.png\")\n",
+    "                output_path = os.path.join(output_plot_dir, flat_name)\n",
     "                plot_overlay(original_path, mask_path, output_path)\n",
     "            else:\n",
-    "                print(f\"[!] Original not found for: {file}\")"
+    "                print(f\"[!] Original image not found for: {file}\")\n",
+    "\n",
+    "print(\"Done!\")"
    ],
    "id": "aa23902386688c06",
    "outputs": [
